--- a/iDocShare_src/iDocShareDist/config/iOSAppReleaseTarget.xcconfig
+++ b/iDocShare_src/iDocShareDist/config/iOSAppReleaseTarget.xcconfig
@@ -9,7 +9,7 @@
 
 #include "iOSAppGeneric.xcconfig"
 
-LIBRARY_SEARCH_PATHS="$PMSROOT/ios/lib"
+LIBRARY_SEARCH_PATHS="$SRCROOT/../lib"
 
 GCC_PREPROCESSOR_DEFINITIONS=$(GENERAL_GCC_PREPROCESSOR_DEFINITIONS)
 
